update statistic and convert logic

--- a/OpenChargeMap/statistic.ipynb
+++ b/OpenChargeMap/statistic.ipynb
@@ -31,18 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "dc664b2f",
    "metadata": {},
    "outputs": [],
    "source": [
     "countries = pd.read_csv(\"Data2025\\\\CountryList.csv\", dtype=str)\n",
-    "countries[\"ISO\"].fillna(\"NA\", inplace=True)"
+    "countries.fillna({\"ISO\": \"NA\"}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "5f4fb6cc",
    "metadata": {},
    "outputs": [],
@@ -60,26 +60,33 @@
     "        NoP = 0 if i[\"NumberOfPoints\"] is None else i[\"NumberOfPoints\"]\n",
     "        Q = 0\n",
     "        fast = False\n",
-    "        for j in i[\"Connections\"]:\n",
-    "            quantity = j[\"Quantity\"]\n",
-    "            powerKW = j[\"PowerKW\"]\n",
-    "            if quantity is None:\n",
-    "                Q += 1\n",
-    "            else:\n",
-    "                Q += quantity\n",
-    "            power.add(powerKW)\n",
-    "            if powerKW is not None and powerKW >= 20:\n",
-    "                fastCharging += 1\n",
-    "                if not fast:\n",
-    "                    fastStation += 1\n",
-    "                    fast = True\n",
+    "        if i[\"Connections\"] == []:\n",
+    "            Q += 1\n",
+    "        else:\n",
+    "            for j in i[\"Connections\"]:\n",
+    "                quantity = j[\"Quantity\"]\n",
+    "                powerKW = j[\"PowerKW\"]\n",
+    "                if quantity is None:\n",
+    "                    Q += 1\n",
+    "                else:\n",
+    "                    Q += quantity\n",
+    "                power.add(powerKW)\n",
+    "                if powerKW is not None and powerKW >= 20:\n",
+    "                    fastCharging += 1\n",
+    "                    if not fast:\n",
+    "                        fastStation += 1\n",
+    "                        fast = True\n",
     "        chargingNum += max(NoP, Q)\n",
+    "    \n",
+    "    index = countries[countries[\"ISO\"] == country]\n",
+    "    SiW = index[\"Location Number\"].tolist()[0] if not index.empty else None\n",
+    "    CiW = index[\"Station Number\"].tolist()[0] if not index.empty else None\n",
     "    d = {\n",
     "        \"Country\": country,\n",
     "        \"StationNum\": len(data),\n",
-    "        \"StationNum in Web\": countries.loc[countries[\"ISO\"] == country, \"Location Number\"].tolist()[0],\n",
+    "        \"StationNum in Web\": SiW,\n",
     "        \"ChargingNum\": chargingNum,\n",
-    "        \"ChargingNum in Web\": countries.loc[countries[\"ISO\"] == country, \"Station Number\"].tolist()[0],\n",
+    "        \"ChargingNum in Web\": CiW,\n",
     "        \"Power\": power,\n",
     "        \"Fast Station Num (Contain at least one fast charging)\": fastStation,\n",
     "        \"Fast Charging Num (Power >= 20kW)\": fastCharging,\n",
@@ -113,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
