Clean up code and add data summary in statistics notebook
Removed commented-out legacy CSV export code from OpenChargeMap.py for clarity. Updated statistic.ipynb to include data cleaning and summarization steps for station and charging data, and added export of cleaned statistics. Updated .gitignore to exclude ArcGISProcess/WFS on data.apps.fao.org.wfs.

--- a/OpenChargeMap/statistic.ipynb
+++ b/OpenChargeMap/statistic.ipynb
@@ -96,12 +96,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c6ceee2d",
+   "metadata": {},
+   "source": [
+    "Summary cleanded data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "48558dfd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import geopandas as gpd\n",
+    "\n",
+    "station = gpd.read_file(r\"C:\\\\Users\\\\tengd\\\\OneDrive - The Hong Kong Polytechnic University\\\\Student Assistant\\\\EVCharger\\\\ArcGISProcess\\\\EVCharger.gdb\",layer=\"OCM_Station\")\n",
+    "charging = gpd.read_file(r\"C:\\\\Users\\\\tengd\\\\OneDrive - The Hong Kong Polytechnic University\\\\Student Assistant\\\\EVCharger\\\\ArcGISProcess\\\\EVCharger.gdb\",layer=\"OCM_Charging\")\n",
+    "\n",
+    "station.drop(station.loc[station[\"City\"] == \"X\"].index, inplace=True)\n",
+    "station.set_index(\"UUID\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "84fb4704",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pointsNum = charging.groupby(\"UUID\")[\"Correct_Quantity\"].sum().reset_index()\n",
+    "pointsNum.set_index(\"UUID\", inplace=True)\n",
+    "station = station.join(pointsNum, how=\"left\")\n",
+    "station[\"ChargingNum\"] = station[[\"Correct_Quantity\", \"correct_NumberOfPoints\"]].max(axis=1).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b8375e97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chargingNum = station.groupby([\"country\", \"City\"])[\"ChargingNum\"].sum().reset_index()\n",
+    "chargingNum.set_index([\"country\", \"City\"], inplace=True)\n",
+    "stationNum = station.groupby([\"country\", \"City\"]).size().reset_index(name=\"StationNum\")\n",
+    "stationNum.set_index([\"country\", \"City\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "eac9bee9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all = stationNum.join(chargingNum, how=\"left\")\n",
+    "all.to_csv(\"statistic_clean.csv\", encoding=\"utf-8\")\n",
+    "all.groupby(\"country\").sum().to_csv(\"statistic_clean_country.csv\", encoding=\"utf-8\")"
+   ]
   }
  ],
  "metadata": {
